--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Sanity & Env
+.env
+.env.local
+.env.*.local
+
+# Next.js
+.next/
+node_modules/
